[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name =  "yzab"
# description = "`yzab` is a tool for interactive candlestick & indicators chart."
authors = [{name = "bububut", email = "bububut@gmail.com"},]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "pandas",
    "numpy",
    "fastapi[all]",
]

# [project.optional-dependencies]
# spark = [
#     "pyspark>=3.0.0"
# ]
# test = [
#     "bandit[toml]==1.7.5",
#     "black==23.3.0",
#     "check-manifest==0.49",
#     "flake8-bugbear==23.3.23",
#     "flake8-docstrings",
#     "flake8-formatter_junit_xml",
#     "flake8",
#     "flake8-pyproject",
#     "pre-commit==3.2.2",
#     "pylint==2.17.3",
#     "pylint_junit",
#     "pytest-cov==4.0.0",
#     "pytest-mock<3.10.1",
#     "pytest-runner",
#     "pytest==7.3.1",
#     "pytest-github-actions-annotate-failures",
#     "shellcheck-py==0.9.0.2"
# ]

[project.urls]
Documentation = "https://github.com/bububut/yzab/tree/main#readme"
Source = "https://github.com/bububut/yzab"
Tracker = "https://github.com/bububut/yzab/issues"

[tool.flit.module]
name = "yzab"
